tests/sources/invalid/classes/constructor_amp_not_this.fire
// Parser error: '&' receiver marker in a constructor's parameter list not
// followed by the identifier 'this'.

class Foo {
    x: int32;

    fn Foo(&notThis) {  //~ ERROR FS-PARSE-0010 @13
        this.x = 0;  //~ ERROR FS-PARSE-0003 @9
    }
}
